fixed navbar being clipped through sometimes

--- a/static/style.css
+++ b/static/style.css
@@ -358,6 +358,7 @@ div.savewrapper {
 	position: fixed;
 	width: 100%;
 	top: 0;
+	z-index: 1;
 }
 
 .topnav ul {
